# homeautomation

./: pyproject.toml
influxdb_backup/: main.py
